vlib/v/checker/tests/globals/assign_no_value.out
vlib/v/checker/tests/globals/assign_no_value.vv:1:23: error: global assign must have a type and value, use `name = type(value)` or `name type`
    1 | __global ( test = int )
      |                       ^
